<resources>
    <string name="app_name">GTCollab</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course_page">CoursePageActivity</string>
    <string name="title_activity_add_meeting">AddMeeting</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search for something...</string>
    <string name="title_activity_subject_search">Subject Search</string>
    <string name="title_activity_course_search">Course Search</string>
    <string name="title_activity_course_list">My Courses</string>
    <string name="action_add_course">Add Course</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_course">Course Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_meeting_name_sample">Project 1 Help</string>
    <string name="text_meeting_location_sample">Klauss First Floor Lobby</string>
    <string name="text_meeting_start_date_sample">Fri Nov 13</string>
    <string name="text_meeting_start_time_sample">08:00 PM</string>
    <string name="text_meeting_duration_sample">150 min</string>
    <string name="text_meeting_creator_sample">John Smith</string>
    <string name="text_meeting_num_members_sample">4</string>
    <string name="text_meeting_description_sample">Meeting Description</string>
    <string name="text_group_num_members_sample">4</string>
    <string name="text_group_creator_sample">John Smith</string>
    <string name="text_group_name_sample">Group 1</string>
    <string name="no_courses_found">No courses found</string>
    <string name="no_subjects_found">No subjects found</string>
    <string name="no_groups_found">No groups found</string>
    <string name="no_meetings_found">No meetings found</string>
    <string name="text_user_name_sample">John Smith</string>
    <string name="text_subject_name_sample">Computer Science</string>
    <string name="no_users_found">No users found</string>
    <string name="title_activity_user_list">User List</string>
    <string name="action_leave_course">Leave course</string>
    <string name="action_course_members">Course members</string>
    <string name="action_new_meeting">New Meeting</string>
    <string name="action_new_group">New Group</string>
    <string name="text_course_term_name_sample">Fall 2017</string>
    <string name="text_course_long_name_sample">Algorithms and Data Structures</string>
    <string name="text_course_sections_sample">A, B, C, F</string>
    <string name="text_course_num_members_sample">32</string>
    <string name="title_activity_create_meeting">Create Meeting</string>
    <string name="edit_meeting_name_hint">Name</string>
    <string name="edit_meeting_location_hint">Location</string>
    <string name="edit_meeting_description_hint">Description</string>
    <string name="edit_meeting_start_date_hint">Date</string>
    <string name="edit_meeting_start_time_hint">Time</string>
    <string name="edit_meeting_duration_hint">Duration (minutes)</string>
    <string name="button_create_meeting_text">Create</string>
    <string name="edit_group_name_hint">Name</string>
    <string name="button_create_group_text">Create</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="channel_name">General Notifications</string>
    <string name="action_submit">Submit</string>
    <string name="button_select_members_text">Select Members</string>
    <string name="title_activity_user_select">User Select</string>
    <string name="title_activity_register">Register</string>
    <string name="text_register">Not a member? Sign up now.</string>
    <string name="text_login">Already registered? Log in now.</string>
    <string name="action_register">Register</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_testing">testing</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="button_create_meeting_proposal_text">Submit</string>
    <string name="button_cancel_meeting_proposal_text">Cancel</string>
    <string name="title_activity_group_message">Group Chat</string>
    <string name="title_activity_group_member_list">Members</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="text_term_name_sample">Fall 2017</string>
    <string name="no_terms_found">No Terms Found</string>
    <string name="title_activity_term_list">Term List</string>
    <string name="bullet">•</string>
</resources>
