<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="sakuraiandco.com.gtcollab.activities.CreateMeetingActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_padding">

            <EditText
                android:id="@+id/edit_meeting_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_field_margin"
                android:hint="@string/edit_meeting_name_hint"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_meeting_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_field_margin"
                android:hint="@string/edit_meeting_location_hint"
                android:inputType="text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_meeting_name" />

            <EditText
                android:id="@+id/edit_meeting_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_field_margin"
                android:hint="@string/edit_meeting_start_date_hint"
                android:inputType="date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_meeting_location" />

            <EditText
                android:id="@+id/edit_meeting_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_field_margin"
                android:hint="@string/edit_meeting_start_time_hint"
                android:inputType="time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_meeting_start_date" />

            <EditText
                android:id="@+id/edit_meeting_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_field_margin"
                android:hint="@string/edit_meeting_duration_hint"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_meeting_start_time" />

            <EditText
                android:id="@+id/edit_meeting_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_field_margin"
                android:hint="@string/edit_meeting_description_hint"
                android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_meeting_duration" />

            <Button
                android:id="@+id/button_select_members"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_padding"
                android:text="@string/button_select_members_text"
                android:onClick="selectMembers"
                app:layout_constraintTop_toBottomOf="@+id/edit_meeting_description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/button_create_meeting"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_padding"
                android:text="@string/button_create_meeting_text"
                app:layout_constraintTop_toBottomOf="@+id/button_select_members"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>