<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/meeting_details_short"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_meeting_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/item_padding"
                android:paddingLeft="@dimen/item_padding"
                android:paddingRight="@dimen/item_padding"
                android:paddingBottom="@dimen/item_padding_inner"
                android:text="@string/text_meeting_name_sample"
                android:textSize="@dimen/item_text_size_large" />

            <TextView
                android:id="@+id/text_meeting_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/item_padding_inner"
                android:paddingLeft="@dimen/item_padding"
                android:paddingRight="@dimen/item_padding"
                android:paddingBottom="@dimen/item_padding_inner"
                android:text="@string/text_meeting_location_sample"
                android:textSize="@dimen/item_text_size_default" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/item_padding_inner"
                android:paddingLeft="@dimen/item_padding"
                android:paddingRight="@dimen/item_padding"
                android:paddingBottom="@dimen/item_padding_inner">

                <TextView
                    android:id="@+id/text_meeting_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/text_meeting_start_date_sample"
                    android:textSize="@dimen/item_text_size_default" />

                <TextView
                    android:id="@+id/text_meeting_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/item_padding_inner"
                    android:text="@string/text_meeting_start_time_sample"
                    android:textSize="@dimen/item_text_size_default" />

                <TextView
                    android:id="@+id/text_meeting_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/item_padding"
                    android:text="@string/text_meeting_duration_sample"
                    android:textSize="@dimen/item_text_size_default" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/item_padding_inner"
                android:paddingLeft="@dimen/item_padding"
                android:paddingRight="@dimen/item_padding"
                android:paddingBottom="@dimen/item_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Created by:"
                    android:textSize="@dimen/item_text_size_default" />

                <TextView
                    android:id="@+id/text_meeting_creator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/item_padding_inner"
                    android:text="@string/text_meeting_creator_sample"
                    android:textSize="@dimen/item_text_size_default" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:padding="@dimen/item_padding">

            <LinearLayout
                android:id="@+id/meeting_num_members"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/item_padding_inner"
                    android:src="@drawable/ic_group_black_24dp" />

                <TextView
                    android:id="@+id/text_meeting_num_members"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/item_padding_inner"
                    android:text="@string/text_meeting_num_members_sample"
                    android:textAlignment="center"
                    android:textSize="@dimen/item_text_size_large" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layoutDirection="rtl"
                android:checked="false"
                android:duplicateParentState="false"
                android:text="Join" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_meeting_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_padding"
        android:visibility="gone"
        android:text="@string/text_meeting_description_sample" />

</LinearLayout>