<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_padding"
    tools:context="sakuraiandco.com.gtcollab.activities.CourseActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_field_margin"
        android:text="Meeting Change Proposal"
        android:textSize="@dimen/dialog_title_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_field_margin"
        android:text="No changes detected"
        android:textSize="@dimen/error_message_text_size"
        android:textColor="@color/colorError"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/edit_meeting_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_field_margin"
        android:hint="@string/edit_meeting_location_hint"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_error_message" />

    <EditText
        android:id="@+id/edit_meeting_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_field_margin"
        android:hint="@string/edit_meeting_start_date_hint"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_meeting_location" />

    <EditText
        android:id="@+id/edit_meeting_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_field_margin"
        android:hint="@string/edit_meeting_start_time_hint"
        android:inputType="time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_meeting_start_date" />

    <Button
        android:id="@+id/button_cancel_meeting_proposal"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_field_margin"
        android:text="@string/button_cancel_meeting_proposal_text"
        app:layout_constraintTop_toTopOf="@+id/button_create_meeting_proposal"
        app:layout_constraintBottom_toBottomOf="@+id/button_create_meeting_proposal"
        app:layout_constraintRight_toLeftOf="@+id/button_create_meeting_proposal" />

    <Button
        android:id="@+id/button_create_meeting_proposal"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_field_margin"
        android:text="@string/button_create_meeting_proposal_text"
        app:layout_constraintTop_toBottomOf="@+id/edit_meeting_start_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
